--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@ of self-employment are of interest.</p>-->
         yet structural segregation of designers also increased. How can that be?
       </p></li>-->
       <li><h4><a href="basic/ElbersDrillDownSpecTech.html">Drill down: A. Specialists and technicians</a></h4></li>
+      <li><h4><a href="basic/EstimatingCounterfactuals.html">Drill down: A. Specialists and technicians - 
+        Estimating counterfactuals following Deming and Stephan (1940)
+      </a></h4></li>
     </ol>
   </li>
     </ol>
