correct table numbers

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -340,7 +340,8 @@ occupations include highly gender-specific doctors and nurses.</p>
     values. The estimated cell values are calculated using the procedure developed by 
     <a href="#DemingStephan1940">Deming and Stephan (1940)</a> 
     for adjusting sampled frequency tables when the expected marginal totals are known. Deming and Stephan 
-    provide a worked example that I will follow below.</p>
+    provide a worked example that I adapt in 
+    <a href="EstimatingCounterfactuals.html">Drill down: A. Specialists and technicians - Estimating counterfactuals following Deming and Stephan (1940)</a>.</p>
     <table class="table noincrement" style="margin-left: auto; margin-right: auto;">
         <caption class="noincrement"><b>Table 2. </b>Decomposition of major group changes 1985-2005: A. Specialists and 
             technicians</caption>
