add Friendly et al citation

--- a/basic/EstimatingCounterfactuals.html
+++ b/basic/EstimatingCounterfactuals.html
@@ -271,6 +271,10 @@ rm(A,b)
     <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
         class="uri">doi:10.18637/jss.v089.i07</a></p>
-    </div>    
+    <p><a id="FriendlyEtal2021"></a>Michael Friendly, John Fox and Phil Chalmers (2021). matlib: Matrix Functions
+        for Teaching and Learning Linear Algebra and Multivariate Statistics. R package
+        version 0.9.5. <a href="https://CRAN.R-project.org/package=matlib" 
+        class="uri">https://CRAN.R-project.org/package=matlib</a></p>
+</div>    
 </body>
 </html>
