--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@ of self-employment are of interest.</p>-->
       <li><h4><a href="basic/EstimatingCounterfactuals.html">Drill down: A. Specialists and technicians - 
         Estimating counterfactuals following Deming and Stephan (1940)
       </a></h4></li>
+      <li><h4><a href="basic/SpectechLegalMIndex.html">Drill down: A. Specialists and technicians - M Index for legal occupations
+      </a></h4></li>
     </ol>
   </li>
     </ol>
