--- a/basic/SpectechLegalMIndex.html
+++ b/basic/SpectechLegalMIndex.html
@@ -26,7 +26,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
             estimating counterfactuals</a>. The counterfactual values are from Table 2 of that page.
     </p>
     <table class="noincrement" style="counter-increment: null;">
-        <caption class="noincrement"><b>Table 1. </b>Actual occupation vs gender frequencies for legal occupations in 1985 and 2005 with 
+        <caption class="noincrement"><b>Table 1.</b> Actual occupation vs gender frequencies for legal occupations in 1985 and 2005 with 
         counterfactuals</caption>
         <tr><th></th><th colspan=3>1985</th><th></th><th colspan=3>2005</th></tr>
         <tr><td></td><td colspan=2>Gender</td><td></td><td></td><td colspan=2>Gender</td></tr>
@@ -50,7 +50,7 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         with percentages of the total sample.
     </p>
     <table class="noincrement" style="counter-increment: null;">
-        <caption class="noincrement"><b>Table 2. </b>Actual occupation vs gender percent probabilities for legal occupations in 1985 and 2005 with 
+        <caption class="noincrement"><b>Table 2.</b> Actual occupation vs gender percent probabilities for legal occupations in 1985 and 2005 with 
         counterfactuals</caption>
         <tr><th></th><th colspan=3>1985</th><th></th><th colspan=3>2005</th></tr>
         <tr><td></td><td colspan=2>Gender</td><td></td><td></td><td colspan=2>Gender</td></tr>
@@ -75,9 +75,9 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         \end{align}. $$
         This gives</p>
     <table class="noborder">
-        <tr><td>\(\text{Total change in M}\)</td><td>\(M_{2005}-M_{1985}\)</td><td>\(=\)</td><td>\(-0.000142\)</td><td>\(=> -8.1 \text{% change}\)</td><td></td></tr>
-        <tr><td>\(\text{Structural change}\)</td><td>\(M_{2005}-M_{1985'}\)</td><td>\(=\)</td><td>\(-0.000450\)</td><td>\(=> -25.6 \text{%}\)</td><td>\(\tag{3}\)</td></tr>
-        <tr><td>\(\text{Marginal change}\)</td><td>\(M_{1985'}-M_{1985}\)</td><td>\(=\)</td><td>\(0.000308\)</td><td>\(=> 17.5 \text{%}\)</td></tr>
+        <tr><td>\(\Delta_{total}\)</td><td>\(M_{2005}-M_{1985}\)</td><td>\(=\)</td><td>\(-0.000142\)</td><td>\(=> -8.1 \text{% change}\)</td><td></td></tr>
+        <tr><td>\(\Delta_{structural}\)</td><td>\(M_{2005}-M_{1985'}\)</td><td>\(=\)</td><td>\(-0.000450\)</td><td>\(=> -25.6 \text{%}\)</td><td>\(\tag{3}\)</td></tr>
+        <tr><td>\(\Delta_{marginal}\)</td><td>\(M_{1985'}-M_{1985}\)</td><td>\(=\)</td><td>\(0.000308\)</td><td>\(=> 17.5 \text{%}\)</td></tr>
     </table>
     <p>which shows a 17.5 % increase in M due to marginal changes being offset by a 25.6 % decrease due to structural changes.</p>
 </article>
