--- a/basic/SpectechLegalMIndex.html
+++ b/basic/SpectechLegalMIndex.html
@@ -35,13 +35,14 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         <tr><td>Other legal</td><td>2795</td><td>23926</td><td>26721</td><td></td><td>6379</td><td>29833</td><td>36212</td></tr>
         <tr><td>Other spectech</td><td>2555759</td><td>3789332</td><td>6345091</td><td></td><td>4018698</td><td>4465215</td><td>8483913</td></tr>
         <tr><td>Marginal total</td><td>2559343</td><td>3828462</td><td>6387805</td><td></td><td>4027379</td><td>4514554</td><td>8541933</td></tr>
-        <tr><th></th><th colspan=3>Counterfactuals</th></tr>
-        <tr><td></td><td colspan=2>Gender</td></tr>
-        <tr><td>Occupation</td><td>Female</td><td>Male</td><td>Marginal total</td></tr>
-        <tr><td>Judges, lawyers</td><td>1302</td><td>20506</td><td>21808</td></tr>
-        <tr><td>Other legal</td><td>4541</td><td>31671</td><td>36212</td></tr>
-        <tr><td>Other spectech</td><td>3876555</td><td>4607358</td><td>8483913</td></tr>
-        <tr><td>Marginal total</td><td>4027379</td><td>4514554</td><td>8541933</td></tr>
+        <tr><th></th><th colspan=7>Counterfactuals</th></tr>
+        <tr><th></th><th colspan=3>least squares regression (Deming and Stephan, 1940)</th><th></th><th colspan=3>iterative proportional fitting (Elber, 2021)</th></tr>
+        <tr><td></td><td colspan=2>Gender</td><td></td><td></td><td colspan=2>Gender</td></tr>
+        <tr><td>Occupation</td><td>Female</td><td>Male</td><td>Marginal total</td><td></td><td>Female</td><td>Male</td><td>Marginal total</td></tr>
+        <tr><td>Judges, lawyers</td><td>1302</td><td>20506</td><td>21808</td><td></td><td>1057</td><td>15244</td><td>16301</td></tr>
+        <tr><td>Other legal</td><td>4541</td><td>31671</td><td>36212</td><td></td><td>3654</td><td>23416</td><td>27070</td></tr>
+        <tr><td>Other spectech</td><td>3876555</td><td>4607358</td><td>8483913</td><td></td><td>3007033</td><td>3337401</td><td>6344434</td></tr>
+        <tr><td>Marginal total</td><td>4027379</td><td>4514554</td><td>8541933</td><td></td><td>3011744</td><td>3376061</td><td>6387805</td></tr>
     </table>
     <p>The first decomposition of the change in M between two times \(t_{1}\) and \(t_{2}\) as shown in 
         Equation (1), where \(M(t'_{1}\) is the value of M calculated using the counterfactuals at time \(t_{2}\) versus \(t_{1}\). 
@@ -59,13 +60,14 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
         <tr><td>Other legal</td><td>0.0438</td><td>0.375</td><td>0.418</td><td></td><td>0.0748</td><td>0.349</td><td>0.424</td></tr>
         <tr><td>Other spectech</td><td>40.01</td><td>59.32</td><td>99.33</td><td></td><td>47.05</td><td>52.27</td><td>99.32</td></tr>
         <tr><td>Marginal total</td><td>40.07</td><td>59.93</td><td>100</td><td></td><td>47.15</td><td>52.85</td><td>100</td></tr>
-        <tr><th></th><th colspan=3>Counterfactuals</th></tr>
-        <tr><td></td><td colspan=2>Gender</td></tr>
-        <tr><td>Occupation</td><td>Female</td><td>Male</td><td>Marginal total</td></tr>
-        <tr><td>Judges, lawyers</td><td>0.0152%</td><td>0.240%</td><td>0.255%</td></tr>
-        <tr><td>Other legal</td><td>0.0532</td><td>0.371</td><td>0.424</td></tr>
-        <tr><td>Other spectech</td><td>45.39</td><td>53.94</td><td>99.32</td></tr>
-        <tr><td>Marginal total</td><td>47.15</td><td>52.85</td><td>100</td></tr>
+        <tr><th></th><th colspan=7>Counterfactuals</th></tr>
+        <tr><th></th><th colspan=3>least squares regression (Deming and Stephan, 1940)</th><th></th><th colspan=3>iterative proportional fitting (Elber, 2021)</th></tr>
+        <tr><td></td><td colspan=2>Gender</td><td></td><td></td><td colspan=2>Gender</td></tr>
+        <tr><td>Occupation</td><td>Female</td><td>Male</td><td>Marginal total</td><td></td><td>Female</td><td>Male</td><td>Marginal total</td></tr>
+        <tr><td>Judges, lawyers</td><td>0.0152%</td><td>0.240%</td><td>0.255%</td><td></td><td>0.0165%</td><td>0.237%</td><td>0.255%</td></tr>
+        <tr><td>Other legal</td><td>0.0532</td><td>0.371</td><td>0.424</td><td></td><td>0.0572</td><td>0.367</td><td>0.424</td></tr>
+        <tr><td>Other spectech</td><td>45.39</td><td>53.94</td><td>99.32</td><td></td><td>47.07</td><td>52.25</td><td>99.32</td></tr>
+        <tr><td>Marginal total</td><td>47.15</td><td>52.85</td><td>100</td><td></td><td>47.15</td><td>52.85</td><td>100</td></tr>
     </table>
     <p>Working from the counts in Table 1 to reduce rounding errors, we get 
         $$ \begin{align}
@@ -81,12 +83,50 @@ integrity="sha256-84DKXVJXs0/F8OTMzX4UR909+jtl4G7SPypPavF+GfA=" crossorigin="ano
     </table>
     <p>which shows a 50.5 % increase in M due to marginal changes being offset by a 58.6 % decrease due to structural changes.</p>
 </article>
+<article>
+    <h4>Comparison to Elber's decomposition</h4>
+    <p>Segregation computations for the this compressed dataset are contain in <a href="R/SpectechLegalMIndex.R">supplemental R code</a>. Relevant 
+    extracts are shown below.</p>
+    <h5>Decomposition of the change in M into structural and marginal components.</h5>
+    <p>The segregation package's ipf function calculates a set of counterfactuals using the iterative proportional fitting 
+        algorithm also introduced in Deming and Stephan (1940). In the R console output shown below, n_source is the 1985 data and n_target 
+        is the 2005 data. 
+    </p>
+<pre><code class="language-html"># counterfactuals using ipf function
+(cfacts <- ipf(legal1985, legal2005, "Gender", "OccMinor", weight = "w"))
+## [IPF 1/1] #
+##              
+##   Gender OccMinor n_source n_target           n
+## 1 FEMALE     1028      789     2302    1056.823
+## 2 FEMALE     1029     2795     6379    3654.223
+## 3 FEMALE     1999  2555759  4018698 3007032.515
+## 4   MALE     1028    15204    19506   15244.417
+## 5   MALE     1029    23926    29833   23415.900
+## 6   MALE     1999  3789332  4465215 3337401.121
+</code></pre>
+<pre><code class="language-html"># Decomposing changes in indices
+mutual_difference(legal1985, legal2005, "Gender", "OccMinor", weight = "w")
+            
+##              stat           est
+## 1:             M1  1.764758e-03
+## 2:             M2  1.622900e-03
+## 3:           diff -1.418572e-04
+## 4:      additions  0.000000e+00
+## 5:       removals  0.000000e+00
+## 6: group_marginal  1.175015e-04
+## 7:  unit_marginal  6.226171e-06
+## 8:     structural -2.655849e-04
+</code></pre>
+</article>
 <div id="references" class="section level2">
     <h2 class="hasAnchor">
     <a href="#references" class="anchor"></a>References</h2>
     <p><a id="Elbers2021"></a>Elbers, Benjamin (2021). A Method for Studying Differences in Segregation Across Time and Space. 
         Sociological Methods &amp; Research. <a href="https://doi.org/10.1177/0049124121986204" 
         class="uri">doi:10.18637/jss.v089.i07</a></p>
+    <p><a id="KarmelMaclachlan1988"></a>Karmel, T., M. Maclachlan (1988). Occupational Sex Segregation - Increasing or Decreasing? 
+        Economic Record, vol. 64, no. 3, pp. 187-195. <a href="https://doi.org/10.1111/j.1475-4932.1988.tb02057.x" 
+        class="uri">doi:10.1111/j.1475-4932.1988.tb02057.x</a></p>
     </div>    
 </body>
 </html>
