local segregation for legal

--- a/basic/ElbersDrillDownSpecTech.html
+++ b/basic/ElbersDrillDownSpecTech.html
@@ -296,7 +296,11 @@ entertainment.</p>
         groups. The between share is essentially flat from 1985 to 2005, which implies that 
     existing patterns of gender segregation are being maintained.</p>
         <p> Male-dominated scientists, legal workers and financial workers show 
-    low levels of segregation, an observation that gets a closer look below. Healthcare 
+    low levels of segregation, an observation that gets a closer look below. At first glance, 
+    the finding that segregation is low for scientists may seem odd, given that women accounted for 
+    only 9 % in 1985, this share increasing to only 16 % in 2005. The reason for the low segregation 
+    index is that it compares gender segregation between researchers in the natural sciences and 
+    researchers in the humanities and social sciences. Healthcare 
 occupations include highly gender-specific doctors and nurses.</p>
     <figure>
         <img src="images/SpecTechSegregation01.png"
